--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,9 @@ Suggests:
     dplyr,
     ggplot2,
     testthat
+URL: https://github.com/jrnold/pollster
+BugReports: https://github.com/jrnold/pollster/issues
 VignetteBuilder: knitr
 License: GPL-3
+LazyLoad: yes
 LazyData: true
