change environment variables of travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ notifications:
   email:
     on_success: change
     on_failure: change
+
+env:
+  - R_BUILD_ARGS='--no-manual' R_CHECK_ARGS='--no-manual --as-cran'
