--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
-Package: pollster
-Title: Interface to the Huffpost Pollster API
+Package: pollstR
+Title: R client for the Huffpost Pollster API
 Description: An R interface to the Huffington Post Pollster API, which provides
     programatic interface to political polls.
 Version: 0.0.1
-Authors@R: person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
-    role = c("aut", "cre"))
+Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
+	           role = c("aut", "cre")),
+ 	     person("Thomas J.", "Leeper", role = c("aut"),
+                    email = "thosjleeper@gmail.com"))
 Depends:
     R (>= 3.0.3)
 Imports:
@@ -15,8 +17,8 @@ Suggests:
     dplyr,
     ggplot2,
     testthat
-URL: https://github.com/jrnold/pollster
-BugReports: https://github.com/jrnold/pollster/issues
+URL: https://github.com/rOpenGov/pollstR
+BugReports: https://github.com/rOpenGov/pollstR/issues
 VignetteBuilder: knitr
 License: GPL-3
 LazyLoad: yes
