rename package from pollster to pollstR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
-export(pollster_chart)
-export(pollster_charts)
-export(pollster_polls)
+export(pollstr_chart)
+export(pollstr_charts)
+export(pollstr_polls)
 import(httr)
 import(jsonlite)
 import(plyr)
