--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Title: R client for the Huffpost Pollster API
 Description: An R interface to the Huffington Post Pollster API, which provides
     programatic interface to political polls.
 Version: 0.1.0
+Date: 2014-4-26
 Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
     role = c("aut", "cre")),
     person("Thomas J.", "Leeper", role = c("aut"),
