--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: pollstR
 Title: R client for the Huffpost Pollster API
 Description: An R interface to the Huffington Post Pollster API, which provides
-    programatic interface to political polls.
-Version: 0.2.0
-Date: 2014-4-26
+    programmatic interface to political polls.
+Version: 1.0.0
+Date: 2014-4-30
 Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
     role = c("aut", "cre")),
     person("Thomas J.", "Leeper", role = c("aut"),
