--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,23 +5,25 @@ Description: Client for the HuffPost Pollster API, which provides
 Version: 1.2.1
 Date: 2015-06-30
 Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
-    role = c("aut", "cre")),
-    person("Thomas J.", "Leeper", role = c("aut"),
-    email = "thosjleeper@gmail.com"))
+  role = c("aut", "cre")),
+  person("Thomas J.", "Leeper", role = c("aut"),
+  email = "thosjleeper@gmail.com"))
 Depends:
-    R (>= 3.0.3)
+  R (>= 3.0.3)
 Imports:
-    httr,
-    plyr,
-    jsonlite
+  httr,
+  jsonlite,
+  purrr,
+  tibble
 Suggests:
-    knitr,
-    dplyr,
-    ggplot2,
-    testthat
+  knitr,
+  dplyr,
+  ggplot2,
+  testthat
 URL: https://github.com/rOpenGov/pollstR
 BugReports: https://github.com/rOpenGov/pollstR/issues
 VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
 LazyData: true
+RoxygenNote: 5.0.1
