--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,9 @@ export(pollstr_charts)
 export(pollstr_polls)
 import(httr)
 import(tibble)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,select_)
 importFrom(purrr,map_df)
+importFrom(purrr,rerun)
 importFrom(utils,head)
