--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,pollstr_chart)
 S3method(print,pollstr_charts)
 export(pollstr_chart)
 export(pollstr_charts)
+export(pollstr_charts_tbl)
 export(pollstr_polls)
 import(httr)
 import(tibble)
@@ -12,4 +13,5 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,select_)
 importFrom(purrr,map_df)
 importFrom(purrr,rerun)
+importFrom(stringr,str_detect)
 importFrom(utils,head)
