--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,14 @@
 S3method(print,pollstr_chart)
 S3method(print,pollstr_charts)
 export(pollstr_chart)
+export(pollstr_chart_tbl)
 export(pollstr_charts)
-export(pollstr_charts_tbl)
 export(pollstr_polls)
 import(httr)
 import(tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(purrr,map_df)
 importFrom(purrr,rerun)
