fixed failing tests
I was not importing everything() from dplyr. The interactive tests would work, but not the other tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(httr)
 import(tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(purrr,map_df)
