Update for API changes and major rewriting of code
* Renamed functions to start with `pollster_` since I kept misstyping them. However,
    the old function names beginnning with `pollstr_` still work.
* Renamed the classes returned by pollster functions to start with `pollster_`.
* Added function `pollster_chart_tbl` which returns all polls related to a chart.
* Added function `pollster_house_effects` which returns the pollster house effects for a chart.
* Pollster API changes: deprecated `topic` argument in `pollstr_polls` (#11);
  added `question` argument to `pollstr_polls` (#12); added `max_pages` argument to `pollstr_charts` to support paging.
* Edited and rewrote much of the vignette. The new example uses the 2016 General Election
    between Clinton and Trump.
* Miscellaneous non-user facing rewrites to code to make it more robust.

Fixes #9, #11, #12

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: pollstR
 Title: Client for the HuffPost Pollster API
 Description: Client for the HuffPost Pollster API, which provides
     access to U.S. opinion polls since 2004.
-Version: 1.2.2
-Date: 2016-03-03
+Version: 1.4.0
+Date: 2016-07-24
 Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
     role = c("aut", "cre")),
     person("Thomas J.", "Leeper", role = c("aut"),
@@ -12,24 +12,23 @@ Authors@R: c(person("Jeffrey B.", "Arnold", email = "jeffrey.arnold@gmail.com",
 Depends:
     R (>= 3.0.3)
 Imports:
+    dplyr,
     httr,
-    plyr,
-    jsonlite
+    jsonlite,
+    purrr,
+    readr,
+    stringr,
+    tibble
 Suggests:
     knitr,
-    dplyr,
     ggplot2,
     rmarkdown,
-    testthat
+    testthat,
+    tidyr
 URL: https://github.com/rOpenGov/pollstR
 BugReports: https://github.com/rOpenGov/pollstR/issues
 VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
 LazyData: true
-Collate:
-    'pollstr-package.R'
-    'chart.R'
-    'charts.R'
-    'polls.R'
 RoxygenNote: 5.0.1
